# deepseek-desktop

./: .editorconfig  .gitignore  .gitmodules  AUTHORS.md  App.xaml  App.xaml.cs  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  DeepSeek.slnx  DeepSeekBrowser.csproj  Directory.Build.props  MainWindow.xaml  MainWindow.xaml.cs  README.md  RELEASE_v2.1.0.md  RELEASE_v2.2.0.md  RELEASE_v2.3.0.md  RELEASE_v2.4.0.md  RELEASE_v2.5.0.md  build.ps1  eslint.config.js  package.json
DeepSeek.Core/: DeepSeek.Core.csproj
DeepSeek.Core.Tests/: AgentAutomationTests.cs  AgentDesktopConfigSyncTests.cs  AgentSessionStoreTests.cs  AutoModelSelectorTests.cs  Chat2ApiCompatTests.cs  Chat2ApiScopeCollection.cs  ChatNavigationPolicyTests.cs  ConfigStoreTests.cs  DeepSeek.Core.Tests.csproj  DeepSeekTuiConfigSyncTests.cs  DsdAgentApiScopeCollection.cs  DsdOpenAiCompatTests.cs  EmbeddedStackBridgeLinkerTests.cs  InternalChatChannelTests.cs  TestConfigIsolation.cs  WorkModeModesTests.cs  WorkModeStatePayloadTests.cs
DeepSeek.DdBridge/: App.xaml  App.xaml.cs  BridgeHostWindow.xaml  BridgeHostWindow.xaml.cs  BridgeIpcSmoke.cs  BridgeStartupContext.cs  DeepSeek.DdBridge.csproj
DeepSeek.Desktop/: App.xaml  App.xaml.cs  DeepSeek.Desktop.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
DeepSeek.Launcher/: DeepSeek.Launcher.csproj  Program.cs
DeepSeek.Qt/: CMakeLists.txt
DeepSeek.Qt/src/: AssetUrlScheme.cpp  AssetUrlScheme.h  BridgeClient.cpp  BridgeClient.h  DeepSeekHost.cpp  DeepSeekHost.h  MainWindow.cpp  MainWindow.h  WebViewPage.cpp  WebViewPage.h  main.cpp
(+571 files in other folders)
